--- a/NitmapTestNG/pom.xml
+++ b/NitmapTestNG/pom.xml
@@ -44,6 +44,21 @@
 
 <!-- https://mvnrepository.com/artifact/javax.media/jai_core -->
 
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.2.2</version>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.2</version>
+</dependency>
+
 
 
 </dependencies>
